# require-suppression-comments

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml  require_suppression_comments.py
tests/: test_check.py
