[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "require-suppression-comments"
version = "0.1.0"
description = "Pre-commit hook that requires explanatory comments on lint suppression annotations"
requires-python = ">=3.9"

[project.scripts]
require-suppression-comments = "require_suppression_comments:main"

[project.optional-dependencies]
dev = ["ruff", "bandit", "mypy", "pytest"]

[tool.setuptools]
py-modules = ["require_suppression_comments"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax)
    "C90",  # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
